# All-hand

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  FINAL-ARCHITECTURE.md  INTEGRITY-REPORT.md  README.md  agent_manager.py  agents.yaml  agos_system_registry_report.json  auto_fetch_agents.py  execution_program  generate_agents_catalogue.py  generate_real_agents.py  render.yaml  requirements.txt  rie_sprint1  run.py  server.py
agos-kernel/: README.md  agos_system_registry.py  contract_engine  decision_pipeline  event_engine  execution_context  kernel.py  main.py  mission_engine  pyproject.toml  requirements.txt  resource_manager  run_kernel.py  run_tests.py  skill_engine  state_store  test_adapter_template_policy.py  test_agent_model_tool.py  test_capability_program.py  test_certification_benchmark_audit.py  test_civilization.py  test_civilization_marketplace_connector.py  test_domain_knowledge_workflow.py  test_execution_implementation.py  test_expansion.py  test_integration.py  test_intelligence.py  test_knowledge_brain.py  test_language_framework_cloud.py  test_platform.py  test_runtime.py  test_v2.py
agos-kernel/adapters/: __init__.py
agos-kernel/api/: __init__.py  server.py
agos-kernel/bootstrapper/: __init__.py
agos-kernel/brain/: engine.py
agos-kernel/capabilities/: __init__.py  _repository_analysis.py  registry.py
agos-kernel/civilization/: run_batch.py  run_final_batch.py  run_foundation.py  runtime.py
agos-kernel/cli/: __init__.py  cli.py
agos-kernel/config/: __init__.py  config.py
agos-kernel/core/: __init__.py  autonomous.py  bootstrap.py  seal.py
agos-kernel/decision/: __init__.py
agos-kernel/diagnostics/: __init__.py  runtime.py
agos-kernel/ecosystem/: run_ecosystem.py  run_ecosystem_batch_2.py
agos-kernel/engine/: __init__.py  engine.py
agos-kernel/enterprise/: run_enterprise.py  run_enterprise_batch_2.py
agos-kernel/evaluation/: __init__.py  evaluation.py
agos-kernel/evolution/: run_evolution.py
agos-kernel/execution/: __init__.py
agos-kernel/federation/: run_federation.py  run_federation_batch_2.py
agos-kernel/governance/: runtime.py
agos-kernel/knowledge/: __init__.py
agos-kernel/launcher/: __init__.py  launcher.py
agos-kernel/longrunning/: __init__.py  manager.py
agos-kernel/meta/: __init__.py  meta.py
agos-kernel/observability/: observability_core.py
agos-kernel/observer/: __init__.py  observer.py
(+2479 files in other folders)
